# waton

./: .gitignore  .pyright-task7.json  .pyright_client_after.txt  .pyright_client_before.txt  .pyright_full_after.txt  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  PKG-INFO  README.md  pyproject.toml  pyrightconfig.json  rename_script.py  ruff.toml  test_out.txt
.github/workflows/: parity-gate.yml  release-pypi.yml  security-audit.yml
.tmp/: pyright-after-waveA.json  pyright-app_state-after.json  pyright-app_state-after2.json  pyright-app_state.json  pyright-binary_codec.json  pyright-current.json  pyright-mid-hotspots.json  pyright-process_message-after.json  pyright-process_message-after2.json  pyright-process_message.json  pyright-proto-utils-after.json  pyright-proto-utils.json  pyright-protocol_message.json  pyright-signal_repo.json  pyright-task7-now.json  pyright-task7-rerun.json  pyright-waveA-after1.json  pyright-waveA-after2.json  pyright-waveA-after3.json  pyright-waveA-before.json  pyright-websocket.json  pyright.json  ruff-after-autofix.json  ruff-after-waveA.json  ruff-before-autofix.json  ruff-task5-mid.json  ruff-task5-now.json  ruff-waveA-targets-after.json  ruff-waveA-targets-after2.json  ruff-waveA-targets.json  ruff.json
docs/parity/: baileys-large-files-inventory.md  baileys-parity-baseline.json  (+2 more)
examples/: basic_bot.py  cli_chat.py  live_connect.py
pywa/: __init__.py
rust/: errors.txt  full_errors.txt
scripts/: live_check.py  parity_evidence_smoke.py  preflight_check.py
tools/: __init__.py
waton/: __init__.py  simple_api.py
(+232 files in other folders)
