[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pywa"
version = "0.1.0"
description = "Python WhatsApp Web Multi-Device library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
    "protobuf>=4.25",
    "aiosqlite>=0.19",
    "qrcode>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "hypothesis>=6.98",
    "ruff>=0.3",
    "pyright>=1.1",
    "maturin>=1.4",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "pywa._crypto"
manifest-path = "Cargo.toml"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
